# rust-fintech

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  orval.config.ts  package-lock.json  package.json  skills-lock.json  vite.config.ts
crates/api/: Cargo.toml
crates/api/migrations/: 20250514000001_create_users_table.sql  20250517000003_create_ledger_accounts_table.sql  20250517000004_create_ledger_entries_table.sql  20250517000005_refactor_journal_entries.sql  20250517000006_rename_journal_entries.sql  20250518000001_create_parties_table.sql  20250519000001_create_party_members_and_gov_ids_tables.sql  20260520000001_add_user_roles_and_party_roles.sql  20260520000002_create_client_onboardings.sql
crates/api/src/: auth.rs  db.rs  router.rs  utils.rs
crates/api/src/controllers/: auth.rs  ledger_accounts.rs  mod.rs  onboarding.rs  parties.rs  users.rs
crates/api/src/errors/: auth_error.rs  ledger_journal_entry_error.rs  mod.rs  onboarding_error.rs  party_error.rs
crates/api/src/models/: ledger_account.rs  ledger_entry.rs  ledger_journal_entry.rs  mod.rs  onboarding.rs  party.rs  user.rs
crates/api/src/services/: auth.rs  ledger_accounts.rs  ledger_journal_entries.rs  mod.rs  onboarding.rs  onboarding_worker_client.rs  parties.rs  sessions.rs  users.rs
docs/: app-design.md  onboarding-temporal-dev.md  openapi.yaml
migrations/: 20250514000001_create_users_table.sql  20250517000001_create_sessions_table.sql  20250517000002_create_currencies_table.sql  20250517000003_create_ledger_accounts_table.sql
scripts/: dev_tmux.sh  reset_db.sh
src/: main.rs  (+1 more)
(+63 files in other folders)
