[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "rust_decimal"] }
thiserror = "2"
rust_decimal = { version = "1", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
dotenvy = "0.15"
tower-cookies = "0.11"
